--- a/index.html
+++ b/index.html
@@ -1,197 +1,143 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
 <head>
-
   <meta charset="UTF-8" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <meta name="description" content="Portafolio de Jose Chamorro. Ciencia de Datos en Salud, Visualización, Análisis GRD, Biomecánica y Computer Vision.">
-
   <title>Portafolio de Jose Chamorro</title>
-
   <link rel="stylesheet" href="style.css" />
-
 </head>
-
 <body>
-
   <header>
-
     <h1>Portafolio de Jose Chamorro</h1>
-
-    <p>Ciencia de Datos en Salud · Visualización · Análisis GRD · Biomecánica</p>
-
+    <p>Ciencia de Datos en Salud · Visualización · Análisis GRD · Biomecánica · **Machine Learning**</p>
     <div class="social-buttons">
-
       <a href="https://www.linkedin.com/in/josé-chamorro" target="_blank">LinkedIn</a>
-
       <a href="https://github.com/joch89" target="_blank">GitHub</a>
-
     </div>
-
   </header>
 
-
-
   <main>
-
-    <!-- Sección Sobre mí -->
-
-    <section class="about-me">
-
+        <section class="about-me">
       <div class="about-container">
-
         <div class="about-photo">
-
           <img src="https://avatars.githubusercontent.com/u/110002047?s=400&u=dd9de1e9936551ba6dedf1eb9ff7fa5e82786de4&v=4" alt="Foto de José Chamorro">
-
         </div>
-
         <div class="about-text" style="text-align: justify;">
-
           <h2>Sobre mí</h2>
-
           <p><strong>Nombre:</strong> José Chamorro</p>
-
-          <p><strong>Presentación personal:</strong>  
-
-          Soy kinesiólogo y Quiropráctico con 10 años de experiencia en Rehabilitación con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos.  
-
-          He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.  
-
+          <p><strong>Presentación personal:</strong>
+          Soy kinesiólogo y Quiropráctico con 10 años de experiencia en Rehabilitación con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos.
+          He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.
           Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.</p>
-
           <p>Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.</p>
-
           <p>Mi objetivo profesional es seguir creciendo en el área de Health Data Science, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar la toma de decisiones y salud de las personas, con especial interés en GRD y Computer Vision.</p>
-
         </div>
-
       </div>
-
     </section>
 
+        <section class="projects-ml">
+      <div class="projects-container">
+        <h2>Proyectos de Machine Learning</h2>
 
+                <div class="project-card ml-project">
+          <h3>🧠 Predicción de Cáncer de Mama (Proyecto MLOps)</h3>
+          <p><strong>Descripción:</strong> Desarrollo de un pipeline completo de Machine Learning (MLOps) para la clasificación de tumores de mama (benignos/malignos) basado en el dataset de Wisconsin. Este proyecto se enfoca no solo en la precisión del modelo, sino también en la **automatización** y **puesta en producción** del mismo.</p>
+          <p><strong>Objetivos:</strong>
+          <ul>
+            <li>Implementar un modelo de clasificación con alta sensibilidad y especificidad.</li>
+            <li>Configurar un flujo de trabajo MLOps (Versionamiento de datos, entrenamiento, registro y despliegue).</li>
+            <li>Demostrar la capacidad de llevar un modelo de la experimentación a la producción.</li>
+          </ul>
+          </p>
+          <p><strong>Tecnologías utilizadas:</strong> Python, Scikit-learn, **MLflow** (para seguimiento de experimentos y registro de modelos), **DVC** (Data Version Control), Docker, GitHub Actions, Streamlit (para la interfaz de despliegue).</p>
+          <p><strong>Reflexión:</strong> "Este proyecto fue fundamental para comprender que la Ciencia de Datos en un entorno real no termina con el entrenamiento del modelo. La implementación de MLOps con **MLflow y DVC** me permitió aprender sobre la **trazabilidad** y la **reproducibilidad**, aspectos críticos en aplicaciones sensibles como la salud."</p>
+          <div class="buttons">
+            <a href="https://github.com/joch89/Prediccion-Cancer-de-mama" target="_blank">Código Fuente (GitHub)</a>
+          </div>
+        </div>
 
-   <!-- Sección de Proyectos -->
+                <div class="project-card ml-project">
+          <h3>🧠 [TÍTULO DEL SEGUNDO PROYECTO ML]</h3>
+          <p><strong>Descripción:</strong> *[Pendiente: Agrega la descripción del proyecto aquí.]*</p>
+          <p><strong>Objetivos:</strong> *[Pendiente: Enumera los objetivos.]*</p>
+          <p><strong>Tecnologías utilizadas:</strong> *[Pendiente: Enumera las tecnologías.]*</p>
+          <p><strong>Reflexión:</strong> *[Pendiente: Agrega una reflexión sobre lo aprendido.]*</p>
+          <div class="buttons">
+            <a href="#" target="_blank">Código Fuente (GitHub)</a>
+          </div>
+        </div>
 
-<section class="projects">
-
-  <div class="projects-container">
-
-    <h2>Mis Proyectos</h2>
-
-
-
-    <div class="project-card">
-
-      <h3>📊 Sankey: Gráficos sobre el recorrido del Paciente</h3>
-
-      <p>Visualiza el flujo del paciente con colecistectomía laparoscópica con y sin complicaciones usando datos abiertos FONASA GRD 2023.</p>
-
-      <div class="buttons">
-
-        <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente" target="_blank">Repositorio</a>
-
-        <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Gráfico cole_lap</a>
-
-        <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Gráfico cole_lap_wcc</a>
-
-        <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_4.html" target="_blank">Grafo 4 3D</a>
-
-      </div>
-
-    </div>
-
-
-
-    <div class="project-card">
-
-      <h3>📊 EDA en Grupos Relacionados a Diagnósticos</h3>
-
-      <p>Análisis Exploratorio de Datos (EDA) sobre un conjunto de datos de egresos hospitalarios (GRD) del año 2023.</p>
-
-      <div class="buttons">
-
-        <a href="https://github.com/joch89/EDA-en-CMBD-GRD-2023-FONASA.git" target="_blank">Repositorio</a>
-
-      </div>
-
-    </div>
-
-
-
-    <div class="project-card">
-
-      <h3>📊 Top 20 Diagnósticos Principales por cantidad de egresos</h3>
-
-      <p>Agrupación por Diagnóstico1, Diagnóstico2, Procedimiento1 y Procedimiento2 en las bases de datos de FONASA entre los años 2019-2020.</p>
-
-      <div class="buttons">
-
-        <a href="https://github.com/joch89/Grupos-Relacionados-Diagnostico-1" target="_blank">Repositorio</a>
-
-        <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2019.jpg" target="_blank">Tabla 2019</a>
-
-        <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2020.jpg" target="_blank">Tabla 2020</a>
-
-        <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2021.jpg" target="_blank">Tabla 2021</a>
+                <div class="project-card ml-project">
+          <h3>🧠 [TÍTULO DEL TERCER PROYECTO ML]</h3>
+          <p><strong>Descripción:</strong> *[Pendiente: Agrega la descripción del proyecto aquí.]*</p>
+          <p><strong>Objetivos:</strong> *[Pendiente: Enumera los objetivos.]*</p>
+          <p><strong>Tecnologías utilizadas:</strong> *[Pendiente: Enumera las tecnologías.]*</p>
+          <p><strong>Reflexión:</strong> *[Pendiente: Agrega una reflexión sobre lo aprendido.]*</p>
+          <div class="buttons">
+            <a href="#" target="_blank">Código Fuente (GitHub)</a>
+          </div>
+        </div>
 
       </div>
+    </section>
 
-    </div>
+        <section class="projects">
+      <div class="projects-container">
+        <h2>Otros Proyectos de Análisis y Visualización</h2>
 
+        <div class="project-card">
+          <h3>📊 Sankey: Gráficos sobre el recorrido del Paciente</h3>
+          <p>Visualiza el flujo del paciente con colecistectomía laparoscópica con y sin complicaciones usando datos abiertos FONASA GRD 2023.</p>
+          <div class="buttons">
+            <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente" target="_blank">Repositorio</a>
+            <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Gráfico cole_lap</a>
+            <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Gráfico cole_lap_wcc</a>
+            <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_4.html" target="_blank">Grafo 4 3D</a>
+          </div>
+        </div>
 
+        <div class="project-card">
+          <h3>📊 EDA en Grupos Relacionados a Diagnósticos</h3>
+          <p>Análisis Exploratorio de Datos (EDA) sobre un conjunto de datos de egresos hospitalarios (GRD) del año 2023.</p>
+          <div class="buttons">
+            <a href="https://github.com/joch89/EDA-en-CMBD-GRD-2023-FONASA.git" target="_blank">Repositorio</a>
+          </div>
+        </div>
 
-    <div class="project-card">
+        <div class="project-card">
+          <h3>📊 Top 20 Diagnósticos Principales por cantidad de egresos</h3>
+          <p>Agrupación por Diagnóstico1, Diagnóstico2, Procedimiento1 y Procedimiento2 en las bases de datos de FONASA entre los años 2019-2020.</p>
+          <div class="buttons">
+            <a href="https://github.com/joch89/Grupos-Relacionados-Diagnostico-1" target="_blank">Repositorio</a>
+            <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2019.jpg" target="_blank">Tabla 2019</a>
+            <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2020.jpg" target="_blank">Tabla 2020</a>
+            <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2021.jpg" target="_blank">Tabla 2021</a>
+          </div>
+        </div>
 
-      <h3>📊 Análisis de landmarks en una patada de costado de taekwondo</h3>
-
-      <p>Análisis cinemático automatizado de una patada de costado en taekwondo utilizando MediaPipe y Python. Se identifican y visualizan los puntos clave del cuerpo (landmarks) en cada fotograma del video, permitiendo evaluar la técnica, altura y alineación del movimiento.</p>
-
-      <div class="buttons">
-
-        <a href="https://github.com/joch89/Analisis-Patada-de-Costado" target="_blank">Repositorio</a>
-
-        <a href="https://joch89.github.io/Analisis-Patada-de-Costado/costadouno.mp4" target="_blank">Patada sin analizar</a>
-
-        <a href="https://joch89.github.io/Analisis-Patada-de-Costado/output_video.mp4" target="_blank">Patada con landmarks</a>
+        <div class="project-card">
+          <h3>📊 Análisis de landmarks en una patada de costado de taekwondo</h3>
+          <p>Análisis cinemático automatizado de una patada de costado en taekwondo utilizando MediaPipe y Python. Se identifican y visualizan los puntos clave del cuerpo (landmarks) en cada fotograma del video, permitiendo evaluar la técnica, altura y alineación del movimiento.</p>
+          <div class="buttons">
+            <a href="https://github.com/joch89/Analisis-Patada-de-Costado" target="_blank">Repositorio</a>
+            <a href="https://joch89.github.io/Analisis-Patada-de-Costado/costadouno.mp4" target="_blank">Patada sin analizar</a>
+            <a href="https://joch89.github.io/Analisis-Patada-de-Costado/output_video.mp4" target="_blank">Patada con landmarks</a>
+          </div>
+        </div>
 
       </div>
-
-    </div>
-
-
-
-  </div>
-
-</section>
-
+    </section>
   </main>
 
-
-
   <footer>
-
     <p>&copy; 2025 Jose Chamorro · <a href="mailto:jm.chamorro.g@gmail.com">jm.chamorro.g@gmail.com</a></p>
-
     <div class="social-footer">
-
       <a href="https://www.linkedin.com/in/josé-chamorro" target="_blank">LinkedIn</a> |
-
       <a href="https://github.com/joch89" target="_blank">GitHub</a>
-
     </div>
-
   </footer>
 
-
-
   <script src="script.js"></script>
-
 </body>
-
 </html>
