--- a/index.html
+++ b/index.html
@@ -21,20 +21,33 @@
   <!-- MAIN -->
   <main>
     <!-- SOBRE MÍ -->
-    <section class="about-me" aria-label="Sobre mí">
-      <div class="about-container">
-        <div class="about-photo">
-          <img src="https://avatars.githubusercontent.com/u/110002047?s=400&u=dd9de1e9936551ba6dedf1eb9ff7fa5e82786de4&v=4" alt="Foto de José Chamorro">
-        </div>
-        <div class="about-text">
-          <h2>Sobre mí</h2>
-          <p><strong>Nombre:</strong> José Chamorro</p>
-          <p><strong>Presentación personal:</strong> Soy kinesiólogo y quiropráctico con 10 años de experiencia en rehabilitación con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos. He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>. Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.</p>
-          <p>Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.</p>
-          <p>Mi objetivo profesional es seguir creciendo en el área de Health Data Science, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar la toma de decisiones y salud de las personas, con especial interés en GRD y Computer Vision.</p>
-        </div>
-      </div>
-    </section>
+    <section>
+  <h2>Sobre mí</h2>
+  <p><strong>Nombre:</strong> José Chamorro</p>
+
+  <h3>Perfil profesional</h3>
+  <p>
+    Soy kinesiólogo y quiropráctico con más de 10 años de experiencia en rehabilitación musculoesquelética y deportiva. 
+    Me especializo en biomecánica y optimización del movimiento en deportistas, integrando tecnología, datos y evidencia 
+    para mejorar la toma de decisiones clínicas y de gestión.
+  </p>
+  <p>
+    Actualmente me desempeño como <strong>codificador GRD</strong>, lo que me permite comprender en profundidad cómo los datos estructurados 
+    pueden apoyar procesos clínicos, administrativos y estratégicos en salud. Esta experiencia se complementa con mi interés en 
+    <strong>Ciencia de Datos</strong>, <strong>Machine Learning</strong> y <strong>Computer Vision</strong>, áreas que exploro para potenciar la automatización, 
+    visualización y análisis en entornos clínicos reales.
+  </p>
+  <p>
+    Practico <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia, el aprendizaje continuo y el desarrollo personal.
+  </p>
+
+  <h3>Objetivo profesional</h3>
+  <p>
+    Mi propósito es seguir creciendo en el campo del <strong>Health Data Science</strong>, integrando análisis de datos, visualización clínica 
+    y herramientas innovadoras que aporten valor tanto en la gestión como en la práctica clínica y deportiva. Me interesa especialmente 
+    el uso estratégico de <strong>GRD</strong>, la automatización de procesos y el desarrollo de soluciones visuales que faciliten la toma de decisiones en salud.
+  </p>
+</section>
 
     <!-- PROYECTOS ML -->
     <section class="projects-ml" aria-label="Proyectos de Machine Learning">
@@ -123,3 +136,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
