--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     para mejorar la toma de decisiones clínicas y de gestión.
   </p>
   <p>
-    Actualmente me desempeño como <strong>codificador GRD</strong>, lo que me permite comprender en profundidad cómo los datos estructurados 
+    Tengo experiencia como <strong>codificador GRD</strong>, lo que me permite comprender en profundidad cómo los datos estructurados 
     pueden apoyar procesos clínicos, administrativos y estratégicos en salud. Esta experiencia se complementa con mi interés en 
     <strong>Ciencia de Datos</strong>, <strong>Machine Learning</strong> y <strong>Computer Vision</strong>, áreas que exploro para potenciar la automatización, 
     visualización y análisis en entornos clínicos reales.
@@ -41,7 +41,6 @@
     Practico <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia, el aprendizaje continuo y el desarrollo personal.
   </p>
 
-  <h3>Objetivo profesional</h3>
   <p>
     Mi propósito es seguir creciendo en el campo del <strong>Health Data Science</strong>, integrando análisis de datos, visualización clínica 
     y herramientas innovadoras que aporten valor tanto en la gestión como en la práctica clínica y deportiva. Me interesa especialmente 
@@ -136,4 +135,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
