--- a/index.html
+++ b/index.html
@@ -23,24 +23,30 @@
     <!-- SOBRE MÍ -->
     <section>
   <h2>Sobre mí</h2>
-  <p><strong>Nombre:</strong> José Chamorro</p>
 
-  <h3>Perfil profesional</h3>
-  <p>
-    Soy kinesiólogo y quiropráctico con más de 10 años de experiencia en rehabilitación musculoesquelética y deportiva. 
-    Me especializo en biomecánica y optimización del movimiento en deportistas, integrando tecnología, datos y evidencia 
-    para mejorar la toma de decisiones clínicas y de gestión.
-  </p>
-  <p>
-    Tengo experiencia como <strong>codificador GRD</strong>, lo que me permite comprender en profundidad cómo los datos estructurados 
-    pueden apoyar procesos clínicos, administrativos y estratégicos en salud. Esta experiencia se complementa con mi interés en 
-    <strong>Ciencia de Datos</strong>, <strong>Machine Learning</strong> y <strong>Computer Vision</strong>, áreas que exploro para potenciar la automatización, 
-    visualización y análisis en entornos clínicos reales.
-  </p>
-  <p>
-    Practico <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia, el aprendizaje continuo y el desarrollo personal.
-  </p>
+  <div style="display: flex; align-items: center; gap: 20px;">
+    <img src="ruta-de-tu-foto.jpg" alt="Foto de José Chamorro" style="width: 150px; border-radius: 8px;">
+    <div>
+      <p><strong>Nombre:</strong> José Chamorro</p>
+      <h3>Perfil profesional</h3>
+      <p>
+        Soy kinesiólogo y quiropráctico con más de 10 años de experiencia en rehabilitación musculoesquelética y deportiva. 
+        Me especializo en biomecánica y optimización del movimiento en deportistas, integrando tecnología, datos y evidencia 
+        para mejorar la toma de decisiones clínicas y de gestión.
+      </p>
+      <p>
+        Actualmente me desempeño como <strong>codificador GRD</strong>, lo que me permite comprender en profundidad cómo los datos estructurados 
+        pueden apoyar procesos clínicos, administrativos y estratégicos en salud. Esta experiencia se complementa con mi interés en 
+        <strong>Ciencia de Datos</strong>, <strong>Machine Learning</strong> y <strong>Computer Vision</strong>, áreas que exploro para potenciar la automatización, 
+        visualización y análisis en entornos clínicos reales.
+      </p>
+      <p>
+        Practico <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia, el aprendizaje continuo y el desarrollo personal.
+      </p>
+    </div>
+  </div>
 
+  <h3>Objetivo profesional</h3>
   <p>
     Mi propósito es seguir creciendo en el campo del <strong>Health Data Science</strong>, integrando análisis de datos, visualización clínica 
     y herramientas innovadoras que aporten valor tanto en la gestión como en la práctica clínica y deportiva. Me interesa especialmente 
@@ -135,5 +141,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
