--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h2>Sobre mí</h2>
 
   <div style="display: flex; align-items: center; gap: 20px;">
-    <img src="ruta-de-tu-foto.jpg" alt="Foto de José Chamorro" style="width: 150px; border-radius: 8px;">
+    <img src="https://github.com/joch89.png" alt="Foto de José Chamorro" style="width: 150px; border-radius: 8px;">
     <div>
       <p><strong>Nombre:</strong> José Chamorro</p>
       <h3>Perfil profesional</h3>
@@ -141,6 +141,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
