--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         para mejorar la toma de decisiones clínicas y de gestión.
       </p>
       <p>
-        Actualmente me desempeño como <strong>codificador GRD</strong>, lo que me permite comprender en profundidad cómo los datos estructurados 
+        Me he desempeñado como <strong>codificador GRD</strong>, lo que me permite comprender en profundidad cómo los datos estructurados 
         pueden apoyar procesos clínicos, administrativos y estratégicos en salud. Esta experiencia se complementa con mi interés en 
         <strong>Ciencia de Datos</strong>, <strong>Machine Learning</strong> y <strong>Computer Vision</strong>, áreas que exploro para potenciar la automatización, 
         visualización y análisis en entornos clínicos reales.
@@ -50,7 +50,7 @@
   <p>
     Mi propósito es seguir creciendo en el campo del <strong>Health Data Science</strong>, integrando análisis de datos, visualización clínica 
     y herramientas innovadoras que aporten valor tanto en la gestión como en la práctica clínica y deportiva. Me interesa especialmente 
-    el uso estratégico de <strong>GRD</strong>, la automatización de procesos y el desarrollo de soluciones visuales que faciliten la toma de decisiones en salud.
+    el uso estratégico de datos en salud, como en <strong>GRD</strong>, la automatización de procesos y el desarrollo de soluciones visuales que faciliten la toma de decisiones en salud.
   </p>
 </section>
 
@@ -141,6 +141,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
